tests/baselines/reference/exportAssignmentWithExports.errors.txt
==== tests/cases/compiler/exportAssignmentWithExports.ts (1 errors) ====
    export class C { }
    class D { }
    export = D;
    ~~~~~~~~~~~
!!! error TS1064: Export assignment not allowed in module with exported element.